# ecosyste_ms_cli

./: .bumpversion.cfg  .cz.yaml  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  KNOWN_ISSUES.md  MANIFEST.in  MCP.md  Makefile  Project.md  Readme.md  Tasks.md  date.md  fix_whitespace.py  interesting.md  phase3.md  phase4.md  phase5.md  purl.md  pyproject.toml  requirements-wheels.txt  requirements.txt  review.md  setup.py
apis/: advisories.openapi.yaml  archives.openapi.yaml  awesome.openapi.yaml  commits.openapi.yaml  docker.openapi.yaml  issues.openapi.yaml  licenses.openapi.yaml  ost.openapi.yaml  packages.openapi.yaml  papers.openapi.yaml  parser.openapi.yaml  registries.yaml  repos.openapi.yaml  resolver.openapi.yaml  ruby.openapi.yaml  sbom.openapi.yaml  sponsors.openapi.yaml  summary.openapi.yaml  timeline.openapi.yaml
docs/: Development.md  MCP.md
ecosyste_ms_cli/: __init__.py  main.py
ecosystems_cli/: __init__.py  __main__.py  api_client.py  bravado_client.py  cli.py  constants.py  exceptions.py  mcp_server.py  openapi_client.py
scripts/: fetch_registries.py  security-audit-pipeline.sh  update_api_spec.sh
tests/: __init__.py  test_api_client.py  test_api_client_method_mismatch.py  test_bravado_client.py  test_build_url.py  test_cli.py  test_cli_domain.py  test_constants.py  test_format_value.py  test_help_output.py  test_load_api_spec.py  test_main.py  test_mcp_server.py  test_openapi_client.py  test_package_metadata.py  test_parse_endpoints.py  test_parse_parameters.py  test_print_operations.py  test_print_output.py
(+219 files in other folders)
